--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,13 @@
 gf
 main
 *.exe
+*.bat
+*.log
 output/
 manifest/output/
 temp/
 temp.yaml
 log/*.log
+resource/public/media/
+resource/private/tmp/
+resource/private/files/
