--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -4,12 +4,12 @@ FROM loads/alpine:3.8
 #                                 INSTALLATION                                #
 ###############################################################################
 
-ENV WORKDIR  /app
-ADD bin      $WORKDIR/bin
-ADD log      $WORKDIR/log
-ADD manifest $WORKDIR/manifest
-ADD resource $WORKDIR/resource
-RUN chmod +x $WORKDIR/bin/iim-client
+ENV WORKDIR        /app
+ADD bin/iim-client $WORKDIR/bin/iim-client
+ADD log            $WORKDIR/log
+ADD manifest       $WORKDIR/manifest
+ADD resource       $WORKDIR/resource
+RUN chmod +x       $WORKDIR/bin/iim-client
 
 ###############################################################################
 #                                    START                                    #
