修复redis哨兵模式问题和依赖升级

--- a/manifest/config/config.example.yaml
+++ b/manifest/config/config.example.yaml
@@ -10,7 +10,7 @@ redis:
     address: 127.0.0.1:6379
     db: 1
     pass: iim666
-#    masterName: default  # 哨兵模式必填
+#    masterName: mymaster  # 哨兵模式必填
     minIdle: 2
     maxIdle: 5
     maxActive: 100
